--- a/frontend/my-react-app/src/components/test.css
+++ b/frontend/my-react-app/src/components/test.css
@@ -1773,7 +1773,7 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
   color: #000;
   border-radius: 36px;
-  border-color: 0.5px solid #000;
+  border: 0.5px solid #fff;
   cursor: pointer;
   text-align: center;
   font-size: 0.85rem;
