--- a/frontend/my-react-app/src/components/test.css
+++ b/frontend/my-react-app/src/components/test.css
@@ -1913,7 +1913,7 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   color: #000;
   font-weight: bold;
-  text-size: 1.2rem
+  font-size: 1.2rem
 }
 
 /* Popup buttons */
