--- a/frontend/my-react-app/src/components/pages/store/DailyStation.css
+++ b/frontend/my-react-app/src/components/pages/store/DailyStation.css
@@ -3,10 +3,10 @@
 
 /* Global Variables */
 :root {
-  --primary-color: #4a6cfa;
+  --primary-color: #4d0000;
   --primary-light: #7590ff;
   --primary-dark: #344db0;
-  --secondary-color: #ff5722;
+  --secondary-color: #990000;
   --success-color: #4caf50;
   --error-color: #f44336;
   --warning-color: #ff9800;
